--- a/style.css
+++ b/style.css
@@ -24,10 +24,14 @@ header{
 }
 
 .navlist{
-    width: 55%;
+    display: flex;
+    width: 45%;
     text-align: right;
+   
     
-    
+}
+.background-color{
+    width: 2px;
 }
 
 a {
@@ -51,6 +55,7 @@ h1{
 }
 
 .imagem1{
+    display: block;
     margin: 2%;
     width: 920px;
     
@@ -62,6 +67,7 @@ h1{
 }
 
 .imagem2{
+    display: block;
     margin: 2%;
     width: 920px;
     
@@ -71,5 +77,6 @@ h1{
 
 
 .social-midia, a{
+    display: flexbox;
     width: 20%;
 }
